<resources>
    <!--Internet connection-->
    <string name="internet_connectivity">Please check your Internet connection and refresh the page</string>
    <string name="internet_connectivity_drawer">Please check your Internet connection and try again</string>
    <!--Error message-->
    <string name="search_error">Error: failed to fetch results! Please try again later</string>
    <!--App title-->
    <string name="app_name">My News</string>

    <!--Tab name-->
    <string name="tab_name_1">TOP STORIES</string>
    <string name="tab_name_2">MOST POPULAR</string>
    <string name="tab_name_3">TECH</string>
    <string name="tab_name_4">SPORTS</string>

    <!--Fragments url category/section for httpExecute:  /{section}.json?q=...-->
    <string name="home">home</string>
    <string name="days_period">7</string>
    <string name="technology">technology</string>
    <string name="sports">sports</string>

    <!--RecyclerView Item text-->
    <string name="item_section">section</string>
    <string name="item_subsection">sub-section</string>
    <string name="item_date">date</string>
    <string name="item_Content_Title">Content-Title</string>

    <!--Drawer categories for class file-->
    <string name="categoryPutExtraID">categoryPutExtraID</string>
    <string-array name="categories">
        <item>world</item>
        <item>politics</item>
        <item>business</item>
        <item>health</item>
        <item>automobiles</item>
        <item>science</item>
        <item>books</item>
        <item>food</item>
        <item>movies</item>
        <item>arts</item>
        <item>fashion</item>
        <item>travel</item>
    </string-array>

    <!--Categories for Drawer Layout file-->
    <string name="more_news">More News</string>
    <string name="world_news">World</string>
    <string name="travel">Travel</string>
    <string name="arts">Arts</string>
    <string name="automobiles">Automobiles</string>
    <string name="books">Books</string>
    <string name="business">Business</string>
    <string name="fashion">Fashion</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="movies">Movies</string>
    <string name="politics">Politics</string>
    <string name="science">Science</string>
    <!--category values for drawer URLs-->

    <!--Used in navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Overflow menu items-->
    <string name="itme_1">Notifications</string>
    <string name="item_2">Help</string>
    <string name="item_3">About</string>

    <!--Search Activity XML-->
    <string name="hint_date"><u>dd/mm/yyyy</u></string>
    <string name="category_arts">Arts</string>
    <string name="category_business">Business</string>
    <string name="category_entrepreneurs">Entrepreneurs</string>
    <string name="category_politics">Politics</string>
    <string name="category_sports">Sports</string>
    <string name="category_travel">Travel</string>

    <!--Search and Notifications Activity class-->
    <string name="begin_date">begin_date</string>
    <string name="end_date">end_date</string>
    <string name="filter_query">filter_query</string>
    <string name="search_query">search_query</string>
    <string name="sort">sort</string>
    <string name="sort_value">newest</string>
    <string name="no_results">Couldn\'t find results for your query</string>
    <string name="Your_filter_field_is_empty">Please select at least one category</string>
    <string name="category_arts_filter">\"Arts\"</string>
    <string name="category_business_filter">\"Business\"</string>
    <string name="category_entrepreneurs_filter">\"Entrepreneurs\"</string>
    <string name="category_politics_filter">\"Politics\"</string>
    <string name="category_sports_filter">\"Sports\"</string>
    <string name="category_travel_filter">\"Travel\"</string>
    <string name="notifications_off">Notifications were turned OFF</string>
    <string name="notifications_on">Notifications have been enabled</string>
    <string name="category_checkbox_limit">You cannot uncheck all categories while the notification switch is ON</string>
    <string name="startDate_is_bigger_then_endDate">Notice: start-date can\'t be bigger then the end-date</string>
    <string name="search_actionBar_title">Search</string>
    <string name="notifications_actionBar_title">Notifications</string>
    <string name="switch_off_to_edit"> (Switch off to edit)</string>
    <string name="search_query_hint">Search query</string>
    <string name="notifications_query_hint">Notifications query</string>
    <string name="startDate_hint">Start Date:</string>
    <string name="endDate_hint">End Date:</string>
    <string name="search_button">Search</string>
    <string name="notification_text">Enable notifications (once per day)    </string>

    <!--SharedPreferences CheckBoxes file and names-->
    <string name="checkbox_state">checkbox_state</string>

    <!--SharedPreferences Switch file and names-->
    <string name="switch_SP_file">save_switch_state</string>
    <string name="search_start_date">search_start_date</string>
    <string name="checkbox_filter_string">checkboxes_filter_string</string>
    <string name="query_string">query_string</string>
    <string name="current_switch_state">current_switch_state</string>

    <!--Search OR Notification intent Booleans-->
    <string-array name="intentSearchOrNotificationsActivity">
        <item>intent_search_activity_boolean</item>
        <item>intent_notification_activity_boolean</item>
    </string-array>

    <!--Dialog box-->
    <string name="close_btn">Close</string>
    <string name="dialog_txt">text</string>
    <!--Below are the Help Texts-->
    <string-array name="dialog_help_text">
        <item>Help - Contact us</item>
        <item>For bug report or at any question, please contact the author of this application on GitHub link below:</item>
        <item></item>
        <item>All data in this application is provided and being fetched from New-York Times API. \nFor more information, please visit the official website by clicking the logo below:</item>
    </string-array>
        <!--below are the About texts-->
    <string-array name="dialog_about_text">
        <item>About My-News App</item>
        <item>My-News App is a news desk application based on New-York-Times API. The application was developed as part of Android development course on OpenClassRooms</item>
        <item>The application was developed by: Eliran Elbaz</item>
        <item>All data in this application is provided and being fetched from New-York Times API. \nFor more information, please visit the official website by clicking the logo below:</item>
    </string-array>

    <!--WorkManager-->
    <string name="WM_periodic_notifications_tag">periodic_notifications</string>
    <string name="positive_task_httpResult_SnackBar_message">We have found new articles</string>
    <string name="positive_description_httpResult_SnackBar_message"> new articles matching your search criteria</string>
    <string name="negative_task_httpResult_SnackBar_message">No articles matching your criteria today!</string>
    <string name="negative_description_httpResult_SnackBar_message">Try expanding your search criteria to improve results</string>

</resources>
