<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context="com.elbaz.eliran.mynewsapp.controllers.activities.MainActivity">

    <!-- 1 | MainActivity RootView -->
    <LinearLayout
        android:id="@+id/activity_main_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Import of toolbar-->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- 1 | Add TabLayout to handle tabs -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/activity_main_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tabs_background_color"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabTextColor="@color/tabs_text_color"
            app:tabSelectedTextColor="#fff"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/activity_main_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <!-- 2 | NavigationView (headerLayout + menu)-->
    <com.google.android.material.navigation.NavigationView
        android:background="@color/dividers"
        android:id="@+id/activity_main_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false"
        app:headerLayout="@layout/activity_main_nav_header"
        app:menu="@menu/activity_main_menu_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>
